--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
             <div class="coming-soon-badge">🚀 LAUNCHING SOON</div>
             <h1>Where <span class="accent">opportunity</span><br>meets flexibility</h1>
             <p class="hero-description">
-                The premier platform connecting talented individuals with exceptional event opportunities across UAE. 
+                The premier platform connecting talented individuals with exceptional event opportunities across The GCC. 
                 Professional growth. Flexible schedules. Unforgettable experiences.
             </p>
         </div>
@@ -587,7 +587,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Eventholic. Launching Soon in UAE.</p>
+        <p>&copy; 2025 Eventholic. Launching Soon Across The GCC.</p>
     </footer>
 
     <script>
@@ -698,3 +698,4 @@
     </script>
 </body>
 </html>
+
