--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
             <div class="feature-card">
                 <div class="feature-icon">💼</div>
                 <h3>Diverse Events</h3>
-                <p>Access corporate functions, community gatherings, concerts, races, and everything in between across UAE.</p>
+                <p>Access corporate functions, community gatherings, concerts, races, and everything in between across The GCC.</p>
             </div>
             <div class="feature-card">
                 <div class="feature-icon">⚡</div>
@@ -698,4 +698,5 @@
     </script>
 </body>
 </html>
+
 
