--- a/index.html
+++ b/index.html
@@ -562,6 +562,18 @@
                     <label for="phone">Phone Number</label>
                     <input type="tel" id="phone" name="phone" required placeholder="+971 XX XXX XXXX">
                 </div>
+                 <div class="form-group">
+                    <label for="country">Country of Residence</label>
+                    <select id="country" name="country" required>
+                        <option value="">Select your country of residence</option>
+                        <option value="UAE">United Arab Emirates</option>
+                        <option value="Saudi Arabia">Saudi Arabia</option>
+                        <option value="Kuwait">Kuwait</option>
+                        <option value="Oman">Oman</option>
+                        <option value="Qatar">Qatar</option>
+                        <option value="Bahrain">Bahrain</option>
+                    </select>
+                </div>
 
                 <div class="form-group">
                     <label for="skills">Your Skills & Strengths</label>
@@ -698,5 +710,6 @@
     </script>
 </body>
 </html>
+
 
 
