--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             font-size: 0.9rem;
         }
 
-        input, textarea {
+        input, textarea, select {
             width: 100%;
             padding: 1rem 1.2rem;
             border: 1px solid var(--border-color);
@@ -334,10 +334,23 @@
             color: var(--text-tertiary);
         }
 
-        input:focus, textarea:focus {
+        input:focus, textarea:focus, select:focus {
             outline: none;
             border-color: #8b5cf6;
             box-shadow: 0 0 0 3px rgba(139, 92, 246, 0.1);
+        }
+
+        select {
+            cursor: pointer;
+            appearance: none;
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12'%3E%3Cpath fill='%236b7280' d='M6 9L1 4h10z'/%3E%3C/svg%3E");
+            background-repeat: no-repeat;
+            background-position: right 1rem center;
+            padding-right: 3rem;
+        }
+
+        [data-theme="dark"] select {
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12'%3E%3Cpath fill='%239ca3af' d='M6 9L1 4h10z'/%3E%3C/svg%3E");
         }
 
         textarea {
@@ -710,6 +723,7 @@
     </script>
 </body>
 </html>
+
 
 
 
